Update dependencies to fix vulnerability Added Jetbrains anotations to make nullability visible Removed GsonProviderLol - why did it exist in the fist place? To fix a bug or something? Fix GZIP test